now compatible with java 1.8